// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenuFooterButton should render default element 1`] = `
<button
  className="drawer-menu-footer-button"
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  type="button"
/>
`;

exports[`DrawerMenuFooterButton should render with click callback 1`] = `
<button
  className="drawer-menu-footer-button"
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onClick={[MockFunction]}
  onMouseDown={[Function]}
  type="button"
/>
`;

exports[`DrawerMenuFooterButton should render with data props 1`] = `
<button
  className="drawer-menu-footer-button"
  data-focus-styles-enabled={true}
  onBlur={[Function]}
  onMouseDown={[Function]}
  type="button"
>
  test-text
</button>
`;
